Ensure that company description wraps before dates

--- a/assets/css/print.css
+++ b/assets/css/print.css
@@ -232,6 +232,7 @@ section {
   font-style: italic;
   margin-bottom: 0px;
   margin-top: 0px;
+  margin-right: 130px;
 }
 .resume .resume-date-worked {
   font-family: "Verdana", sans-serif;
